<resources>

    <string name="lesson_empty">Okienko</string>
    <string name="placeholder_lesson_number">3</string>
    <string name="placeholder_teacher_name">Michał Przykładowy</string>
    <string name="placeholder_subject">Wychowanie przykładowe</string>
    <string name="placeholder_badge_text">badgeText</string>
    <string name="details_subject_placeholder">Matematyka</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj się</string>
    <string name="announcement">Ogłoszenie</string>
    <string name="placeholder_announcement">Darmowe audiobooki w bibliotece Wolne Lektury Fundacja Nowoczesna Polska zaprasza do korzystania z darmowych audiobooków opublikowanych w bibliotece internetowej WolneLektury.pl Z audioteki można korzystać bezpłatnie i bez ograniczeń. Wszystkie nagrania udostępnione zostały na wolnej licencji Creative Commons. Audiobooki dostępne są w trzech formatach: MP3, Ogg Vorbis oraz DAISY (dostosowany do potrzeb osób słabowidzących, niewidomych i wszystkich mających poważne trudności z czytaniem). Wszystkie nagrania znajdują się na stronie internetowej projektu: https://wolnelektury.pl/katalog/audiobooki/</string>
    <string name="placeholder_date">4 lis.</string>
    <string name="comment">Komentarz</string>
    <string name="canceled">odwołane</string>
    <string name="substitution">zastępstwo</string>
    <string name="date_format_no_year">EEEE, d MMMM</string>
    <string name="grade">Ocena</string>
    <string name="placeholder_grade">5</string>
    <string name="weight">Waga</string>
    <string name="placeholder_weight">7</string>
    <string name="category">Kategoria</string>
    <string name="placeholder_category">sprawdzian</string>
    <string name="subject">Przedmiot</string>
    <string name="filozofia">filozofia</string>
    <string name="placeholder_comment">Naprawdę WOW!</string>
    <string name="date">Data</string>
    <string name="add_date">Data dodania</string>
    <string name="placeholder_datetime">19:21, czwartek, 13 września 2001</string>
    <string name="added_by">Dodana przez</string>
    <string name="placeholder_added_by">Ktośtam Jakiśtam</string>
    <string name="last_update">last_update</string>
    <string name="lucky_number">"Szczęśliwy numerek"</string>
    <string name="lesson">lekcja</string>
    <string name="message_no_lessons">Brak lekcji. \n¯\\_(ツ)_/¯</string>
    <string name="forgot_password"><a href="https://synergia.librus.pl/zapomnialem_hasla">Zapomniałem hasła</a></string>

    <string name="timetable_view_title">Plan lekcji</string>
    <string name="grades_view_title">Oceny</string>
    <string name="calendar_view_title">Terminarz</string>
    <string name="announcements_view_title">Ogłoszenia</string>
    <string name="messages_view_title">Wiadomości</string>
    <string name="attendances_view_title">Nieobecności</string>

    <string name="settings_title">Ustawienia</string>
    <string name="about_title">Informacje</string>

    <string name="author_shymmq"><a href="https://github.com/shymmq">shymmq</a></string>
    <string name="author_frioo"><a href="https://github.com/Frioo">Frioo</a></string>
    <string name="author_rowysock"><a href="https://github.com/rowysock">rowysock</a></string>
    <string name="author_xdk78"><a href="https://github.com/xdk78">xdk78</a></string>
    <string name="author_mimi89999"><a href="https://github.com/mimi89999">mimi89999</a></string>
    <string name="author_kacpi2442"><a href="https://github.com/kacpi2442">kacpi2442</a></string>

    <string name="prefs_select_theme">selectTheme</string>
    <string name="prefs_default_fragment">default_fragment</string>
    <string name="default_view">Domyślny widok</string>
    <string name="prefs_grey_out_finished_lessons">greyOutFinishedLessons</string>
    <string name="prefs_use_tabs">useTabs</string>
    <string name="prefs_currrent_lesson_bold">currentLessonBold</string>
    <string name="prefs_enable_notifications_key">enableNotifications</string>
    <string name="enable_notifications">Pokazuj powiadomienia</string>
    <string name="prefs_enabled_notification_types_key">enabledNotificationTypes</string>
    <string name="notification_types">Typy powiadomień</string>
    <string name="received_notifications">Otrzymywane powiadomienia</string>

    <string name="close">Zamknij</string>
    <string name="prefs_dark_theme">selectTheme</string>
    <string name="refresh">Synchronizuj</string>
    <string name="nb">nb</string>
    <string name="average">Średnia</string>
    <string name="np">np</string>
    <string name="shrug">Brak lekcji. \n ¯\\_(ツ)_/¯</string>
    <string name="today">Dzisiaj</string>
    <string name="show_more">pokaż więcej...</string>
    <string name="placeholder_text_grade">Egzamin próbny</string>
    <string name="placeholder_text_grade_content">Przyroda całość - 82% Fizyka :całość - 100% Fizyka : zrealizowane tematy - 100%</string>
    <string name="_1_more_text_grade">+1 ocena tekstowa...</string>
    <string name="no_grades">Brak ocen</string>
    <string name="average_">"Średnia: "</string>
    <string name="mark_all_as_read">Oznacz wszystkie jako przeczytane</string>

    <string name="announcements">Ogłoszenia</string>
    <string name="grades">Oceny</string>
    <string name="events">Wpisy w terminarzu</string>
    <string name="lucky_numbers">Szczęśliwe numerki</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="md_icons_about">&lt;a href="https://github.com/google/material-design-icons/">Material design icons&lt;/a>by Google</string>
    <string name="unknown_error">Wystąpił nieoczekiwany błąd</string>
    <string name="offline_error">Serwis chwilowo niedostępny</string>
    <string name="offline_data_error">Serwis chwilowo niedostępny. Wyświetlane dane mogą być niekatualne</string>
    <string name="wrong_credentials">Nieprawidłowe hasło, spróbuj ponownie</string>
    <string name="no_lucky_number">brak</string>
</resources>
