<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <View
        android:id="@+id/grade_item_color"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:alpha="0.57"
        android:background="@color/md_blue_A700"
        android:visibility="visible" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/grade_item_grade" />

    <TextView
        android:id="@+id/grade_item_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/grade_item_grade"
        android:layout_below="@+id/space"
        android:layout_toEndOf="@+id/grade_item_grade"
        android:layout_toStartOf="@+id/grade_item_unread_badge"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="?android:attr/textColorSecondary"
        tools:text="@string/placeholder_date" />

    <TextView
        android:id="@+id/grade_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/space"
        android:layout_alignTop="@+id/grade_item_grade"
        android:layout_toEndOf="@+id/grade_item_grade"
        android:layout_toStartOf="@+id/grade_item_unread_badge"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/grade"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        tools:text="@string/placeholder_grade" />

    <TextView
        android:id="@+id/grade_item_grade"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/solid_circle"
        android:backgroundTint="@color/md_blue_grey_800"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/np"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/grade_item_unread_badge"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/comment"
        android:tint="@color/md_deep_orange_500"
        app:srcCompat="@drawable/ic_new_releases_black_48dp" />

</RelativeLayout>