<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/attendance_item_shortType" />

    <TextView
        android:id="@+id/attendance_item_lesson_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/attendance_item_shortType"
        android:gravity="center_vertical"
        android:text="@string/placeholder_lesson_number"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/attendance_item_shortType"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/solid_circle"
        android:backgroundTint="@color/md_blue_grey_800"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/nb"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/attendance_item_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/space"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/attendance_item_shortType"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/placeholder_subject"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

</RelativeLayout>